--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,104 @@
+* {
+  padding: 0;
+  margin: 0;
+  box-sizing: border-box;
+}
+
 .App {
-  text-align: center;
-}
-
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
-}
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
-
-.App-header {
-  background-color: #282c34;
   min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
+  text-align: center;
   color: white;
 }
 
-.App-link {
-  color: #61dafb;
+header {
+  min-height: 20vh;
+  display: flex;
+  justify-content: space-evenly;
+  align-items: center;
+  color: black;
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.App-content {
+  min-height: 80vh;
+  display: flex;
+  justify-content: space-evenly;
+  align-items: center;
 }
+
+button {
+  color: white;
+  background: none;
+  width: 30%;
+  border: 2px solid white;
+  padding: 1rem;
+  border-radius: 1rem;
+  cursor: pointer;
+  font-size: 20px;
+  transition: all 0.1s ease-in;
+}
+
+button:hover {
+  box-shadow: 1px 1px 0 1px white,
+              0 0 0 1px white,
+              1px 1px 0 1px white;
+  color: black;
+  background: white;
+}
+
+/*duration content*/
+.duration-content, .timer-content, .sound-content {
+  flex: 1;
+  min-height: 80vh;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-evenly;
+  align-items: center;
+}
+
+.duration-content {
+  background: lightgreen;
+}
+
+
+/*timer*/
+.timer-content {
+  background: pink;
+  position: relative;
+}
+
+.timer-content svg {
+  position: absolute;
+  height: 50%;
+  left: 50%;
+  top: 50%;
+  transform: translate(-50%, -50%);
+  pointer-events: none;
+}
+
+.timer {
+  position: absolute;
+  bottom: 10%;
+  color: white;
+}
+
+/*sound*/
+.sound-content {
+  background: lightblue;
+}
+
+.sound-content button img {
+  height: 100%;
+}
+
+.sound-content button:nth-child(2) {
+  background: rgb(81, 170, 243);
+}
+
+.sound-content button:nth-child(3) {
+  background: rgb(255, 216, 144);
+}
+
+
+
+
+
